--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   }
  </style>
 <body>
-<iframe src="https://www.coinex.com/exchange/lit-usdt"><iframe src="https://www.binance.com/zh-TW/trade/LIT_USDT?layout=pro">
+<iframe width="50%" src="https://www.coinex.com/exchange/lit-usdt"><iframe src="https://www.binance.com/zh-TW/trade/LIT_USDT?layout=pro" width="50%">
 </body>
 </html>
