--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
  <title>2323</title>
  <style>
-  .half-1{
-   width: 50%;
+  body{
+   width: 100%;
+   height: 100%;
+  }
+  iframe{
+    width: 50%;
+   height:100%;
   }
  </style>
 <body>
